Android port prep: lower bytecode target, add AGP wiring
- local.properties: point sdk.dir at /opt/android-sdk
- libs.versions.toml: add AGP 8.7.3 plugin alias
- settings.gradle.kts: add google() repos, include android-app
- root build.gradle.kts: skip the java plugin for android-app
- core/networking/consensus: targetCompatibility = 17 (AGP-compatible)
- BeaconLightClient: replace Thread.ofVirtual() with a daemon Thread

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>